# NeoStats

./: AUTHORS  CREDITS  ChangeLog  ChangeLog.old  INSTALL  INSTNOTES  Makefile.am  Makefile.in  NEWS  README  RELNOTES  TODO  aclocal.m4  configure  configure.in  makeconf  neostats.in  neostats.motd
autotools/: acinclude.m4  ax_distversion.m4  ax_maintainer_mode_auto_silent.m4  ax_path_lib_curl.m4  ax_path_lib_pcre.m4  berkeley_db.m4  ccdv.c  ccdv.m4  libevent.m4  rules.mk  shtool
doc/: CODINGMODULES.txt  README.dev
include/: Makefile.am  Makefile.in  MiniMessage.h  MiniMessageGateway.h  MuscleSupport.h  NeoNet.h  adns.h  adnsdlist.h  adnsinternal.h  adnstvarith.h  auth.h  bans.h  base64.h  botinfo.h  bots.h  channels.h  commands.h  conf.h  config.h  config.h.in  confuse.h  ctcp.h  dcc.h  dl.h  dns.h  events.h  exclude.h  hash.h  helpstrings.h  inspircd.h  ircprotocol.h  ircrecv.h  ircsend.h  ircstring.h  lang.h  list.h  log.h  main.h  modes.h  modules.h  (+21 more)
lib/: Makefile.am  Makefile.in
lib/curl/: Makefile.am  Makefile.in  base64.c  base64.h  ca-bundle.h  content_encoding.c  cookie.c  cookie.h  curl.h  curlx.h  dict.c  dict.h  easy.c  escape.c  file.c  file.h  formdata.c  ftp.c  getenv.c  getinfo.c  gtls.c  gtls.h  hash.h  hostares.c  hostasyn.c  hostip.c  hostip4.c  hostip6.c  hostsyn.c  hostthre.c  http.c  http_chunks.c  http_chunks.h  http_digest.c  http_negotiate.c  http_negotiate.h  http_ntlm.c  http_ntlm.h  inet_ntop.c  krb4.c  (+33 more)
lib/event/: Makefile.am  Makefile.in  buffer.c  devpoll.c  epoll.c  epoll_sub.c  evbuffer.c  event-internal.h  event.c  event.h  kqueue.c  log.h  poll.c  rtsig.c  select.c
lib/execinfo/: Makefile.am  Makefile.in  execinfo.c
lib/nxml/: Makefile.am  Makefile.in  mrss.h  mrss_download.c  mrss_edit.c  mrss_free.c  mrss_generic.c  mrss_internal.h  mrss_options.c  mrss_parser.c  mrss_search.c  mrss_write.c  nxml.h  nxml_download.c  nxml_easy.c  nxml_edit.c  nxml_error.c  nxml_free.c  nxml_init.c  nxml_internal.h  nxml_namespace.c  nxml_parser.c  nxml_string.c  nxml_tools.c  nxml_utf.c  nxml_write.c
lib/pcre/: COPYING  Makefile.am  Makefile.in  README  chartables.c  dftables.c  get.c  internal.h  maketables.c  pcre.c  pcre.h  study.c
modules/: Makefile.am  Makefile.in
modules/connectserv/: Makefile.am  Makefile.in  cs.c  cs.h  cs_help.c
modules/dbm/: Makefile.am  Makefile.in  convertdb.c
modules/dbm/bdb/: Makefile.am  Makefile.in  bdb.c
modules/dbm/gdbm/: Makefile.am  Makefile.in  bucket.c  falloc.c  findkey.c  gdbm.c  gdbmclose.c  gdbmconst.h  gdbmdefs.h  gdbmdelete.c  gdbmerrno.c  gdbmexists.c  gdbmfdesc.c  gdbmfetch.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmstore.c  gdbmsync.c  global.c  hash.c  systems.h  update.c  version.c
modules/dccpartyline/: Makefile.am  Makefile.in  main.c
modules/extauth/: Makefile.am  Makefile.in  extauth.c
modules/hostserv/: Makefile.am  Makefile.in  README  hostserv.c  hostserv.h  hs_help.c
modules/ircdauth/: Makefile.am  Makefile.in  ircdauth.c
modules/limitserv/: Makefile.am  Makefile.in  help.c  limitserv.h  main.c
modules/operlog/: Makefile.am  Makefile.in  help.c  main.c  operlog.h
modules/perltest/: Makefile.am  Makefile.in  NamedVarsInspector.pl  extension.ple  main.c  test.pl
modules/protocol/: Makefile.am  Makefile.in  asuka.c  bahamut14.c  bahamut18.c  client.c  hybrid6.c  hybrid7.c  inspircd.c  ircup10.c  ircup10base.c  nefarious.c  plexus.c  plexus3.c  ultimate2.c  ultimate3.c  unreal31.c  unreal32.c
modules/quoteserv/: Makefile.am  Makefile.in  help.c  main.c  quoteserv.h
modules/quoteserv/data/: discworld  redneck
modules/statserv/: Makefile.am  Makefile.in  channel.c  channel.h  htmlstats.c  htmlstats.h  network.c  network.h  server.c  server.h  ss_help.c  stats.c  stats.h  statserv.c  statserv.h  tld.c  tld.h  user.c  user.h  version.c  version.h
modules/statserv/geoip/: GeoIP.c  GeoIP.h  GeoIPCity.c
modules/statserv/html/: index.tpl
modules/template/: Makefile.am  Makefile.in  main.c
modules/templateauth/: Makefile.am  Makefile.in  main.c
modules/textserv/: Makefile.am  Makefile.in  barmaid.tsdb  help.c  icecream.tsdb  loveserv.tsdb  main.c  moraleserv.tsdb  textserv.h  waitress.tsdb
modules/update/: Makefile.am  Makefile.in  update.c  update.h  update_help.c
src/: Makefile.am  Makefile.in  MiniMessage.c  MiniMessageGateway.c  NV.c  NV.xs  NeoStats.pm  adnscheck.c  adnsevent.c  adnsgeneral.c  adnsparse.c  adnsquery.c  adnsreply.c  adnssetup.c  adnstransmit.c  adnstypes.c  auth.c  bans.c  base64.c  botinfo.c  bots.c  channels.c  commands.c  conf.c  confuse.c  confuselexer.c  confuselexer.l  ctcp.c  dcc.c  dl.c  dns.c  exclude.c  hash.c  helpstrings.c  ircprotocol.c  ircrecv.c  ircsend.c  ircstring.c  lang.c  list.c  (+26 more)
